--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="utf-8">
+<title>SE 3316 Lab 1</title>
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="stylesheet" href="">
 </head>
 <body>
-    Hello World
+<!-- Place your content here -->
+<h1>SE 3316 Lab 1</h1>
+<p>Hello World!</p>
+
+<!-- Embedded JavaScript go here -->
 </body>
 </html>
