--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
 <h1>SE 3316 Lab 1</h1>
 <p>Hello World!</p>
 
+<ul class="common-list">
+    <li class="common-list-item">1</li>
+    <li class="common-list-item">2</li>
+    <li class="common-list-item">3</li>  
+    <li class="common-list-item">4</li>
+    <li class="common-list-item">5</li>
+    <li class="common-list-item">6</li>  
+    <li class="common-list-item">7</li>
+    <li class="common-list-item">8</li>
+    <li class="common-list-item">9</li> 
+    <li class="common-list-item">10</li> 
+    <li class="common-list-item">11</li> 
+    <li class="common-list-item">12</li> 
+    <li class="common-list-item">13</li> 
+    <li class="common-list-item">14</li> 
+    <li class="common-list-item">15</li> 
+    <li class="common-list-item">16</li> 
+    <li class="common-list-item">17</li> 
+    <li class="common-list-item">18</li> 
+    <li class="common-list-item">19</li> 
+    <li class="common-list-item">20</li> 
+
+ </ul>
+
 <!-- Embedded JavaScript go here -->
 </body>
 </html>
+
