Search By Name Functionality
Added JS code to search for pokemon by name
Added functional text search bar at top of web page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <h1>SE 3316 Lab 1</h1>
 <p>Hello World!</p>
 
+
+<input id="nameSearch" onkeypress="handle(event)" type="text"
+    placeholder="Search by Name">
+
 <ul class="common-list">
     <li class="common-list-item">
         <img src="images\1.png" alt="img1" width="150" height="150">
@@ -115,6 +119,7 @@
  </ul>
 
 <!-- Embedded JavaScript go here -->
+<script src="./search.js"></script>
 </body>
 </html>
 
