Added Index Search Bar and Functionality
Added second search bar with respective event handler and search functionality

Renamed search functions for better distinguishability

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <p>Hello World!</p>
 
 
-<input id="nameSearch" onkeypress="handle(event)" type="text"
+<input id="nameSearch" onkeypress="handleNameSearch(event)" type="text"
     placeholder="Search by Name">
+
+<input id="indexSearch" onkeypress="handleIndexSearch(event)" type="number"
+    placeholder="Search by Index">
 
 <ul class="common-list">
     <li class="common-list-item">
