--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
     </li>
  </ul>
 
+ <h1>References</h1>
+ <a href='https://www.reddit.com/r/TheSilphRoad/comments/7p952h/pokemon_go_pokedex_spreadsheet/' id='excelLink'>Pokemon Excel Sheet</a>
+ <br></br>
+ <a href='https://www.kaggle.com/kvpratama/pokemon-images-dataset' id='imagesLink'>Pokemon Images</a>
+
 <!-- Embedded JavaScript go here -->
 <script src="./search.js"></script>
 </body>
