--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <ul class="common-list">
     <li class="common-list-item">
         <img src="images\1.png" alt="img1" width="150" height="150">
-        <br> 001 <br> Bulbasoar <br> Grass/Poison <br> Evolution Stage: 1 <br> 
+        <br> 001 <br> Bulbasaur <br> Grass/Poison <br> Evolution Stage: 1 <br> 
         Move: Sludge Bomb </br>
     </li>
 
