Testing JS DOM manipulation
Added id to html element, uses JS to add additional paragraph tag to webpage (basis for search result functionality)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <input id="indexSearch" onkeypress="handleIndexSearch(event)" type="number"
     placeholder="Search by Index">
 
-<p>Press "Enter" to Search</p>
+<p id = "p1">Press "Enter" to Search</p>
 
 <!-- Unordered List Elements for Pokedex, with respective tags and details -->
 <ul class="common-list">
