Added Pokemon Contents dynamically
Added Div Block for Formatting
Added elements dynamically through JS to be used for search bar results
Formatted String Content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     placeholder="Search by Index">
 
 <p id = "p1">Press "Enter" to Search</p>
+<div id = "divBlock"></div>
 
 <!-- Unordered List Elements for Pokedex, with respective tags and details -->
 <ul class="common-list">
