ImplementedDynamic Search by Index
Added dynamic results for index search on keyrelease

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <input id="nameSearch" onkeyup="dynamicSearchName()" type="text"
     placeholder="Search by Name">
 
-<input id="indexSearch" onkeypress="handleIndexSearch(event)" type="number"
+<input id="indexSearch" onkeyup="dynamicSearchIndex()" type="number"
     placeholder="Search by Index">
 
 <p id = "p1">Press "Enter" to Search</p>
