Commented, Removed Clutter, Reformatted Code
Removed unnecessary code and reformatted files for better legibility

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <input id="indexSearch" onkeyup="dynamicSearchIndex()" type="number"
     placeholder="Search by Index">
 
-<p id = "p1">Press "Enter" to Search</p>
+<!-- Placeholder Div Block for Search Results -->
 <div id = "divBlock"></div>
 
 <!-- Unordered List Elements for Pokedex, with respective tags and details -->
